[gd_scene load_steps=4 format=3 uid="uid://ctwjh38ge7atb"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_hlahm"]
[ext_resource type="Texture2D" uid="uid://d03ltm0sqx61q" path="res://assets/temp/Yellow.png" id="1_vudu8"]
[ext_resource type="PackedScene" uid="uid://bd7b1sxnvl2mb" path="res://scenes/menus/pause_menu.tscn" id="2_i4eg1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hlahm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vudu8")
stretch_mode = 1

[node name="PauseMenu" parent="." instance=ExtResource("2_i4eg1")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -55.595
offset_right = 200.0
offset_bottom = 209.405
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
text = "Start Game"

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
text = "Options"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
